tests/checker/fail/method_ordering_violation.can
Greeting = String

Shout = (Greeting) => String {
    "HELLO"
}

Murmur = (Greeting) => String {
    "hello"
}

Unit => Program {
    "hi" -> Greeting -> Murmur -> Print
    "hi" -> Greeting -> Shout -> Print
}
